# gh-actions-flask-ci

./: .coveragerc  Pipfile  README.md  pyproject.toml  pytest.ini  run.py
.github/workflows/: ci.yml
tests/: test_config.py
