[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-actions-flask-ci"
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "Flask",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "tox",
    "tox-gh-actions",
]
